logs/tentacles.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tentacles'...
Listing './lib/python3.5/site-packages/tentacles/backends'...
Listing './lib/python3.5/site-packages/tentacles/backends/sqlite3'...
Compiling './lib/python3.5/site-packages/tentacles/backends/sqlite3/database.py'...
***   File "./lib/python3.5/site-packages/tentacles/backends/sqlite3/database.py", line 40
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tentacles/backends/sqlite3/fields.py'...
***   File "./lib/python3.5/site-packages/tentacles/backends/sqlite3/fields.py", line 68
    print 'SQINIT'
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tentacles/backends/sqlite3/table.py'...
***   File "./lib/python3.5/site-packages/tentacles/backends/sqlite3/table.py", line 224
    print query, type(query)
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tentacles/database.py'...
***   File "./lib/python3.5/site-packages/tentacles/database.py", line 78
    exec "from %s import *" % modname
                          ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/tentacles/fields.py'...
***   File "./lib/python3.5/site-packages/tentacles/fields.py", line 37
    exec "import %s" % modname
                   ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/tentacles/inheritance.py'...
***   File "./lib/python3.5/site-packages/tentacles/inheritance.py", line 38
    exec "from %s import *" % modname
                          ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/tentacles/table.py'...
***   File "./lib/python3.5/site-packages/tentacles/table.py", line 130
    exec "import %s" % modname
                   ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/tentacles-0.1.1.egg-info'...
Listing './share'...
Listing './share/doc'...
Listing './share/doc/python-tentacles'...
Listing './share/python-wheels'...
